--- a/Pengaduan-masyarakat/Backend/package.json
+++ b/Pengaduan-masyarakat/Backend/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "man",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
+    "express-fileupload": "^1.4.3",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.5.2",
-    "sequelize": "^6.32.1",
-    "uuid": "^9.0.0"
-  }
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.1",
+    "uuid": "^9.0.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
